# salesforce-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: release.yml
examples/salesforce-pubsub/: main.rs
salesforce-core/: Cargo.toml
salesforce-core/src/: client.rs  lib.rs
salesforce-core/src/pubsub/: context.rs
